--- a/SoraServerDocker/.devcontainer/devcontainer.json
+++ b/SoraServerDocker/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "cd /home/vscode/sora-2022.1.0 && sudo bin/sora daemon",
+	"postCreateCommand": "sleep 3s && cd /home/vscode/sora-2022.1.0 && sudo bin/sora daemon",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	//"remoteUser": "vscode",
